Fix broken CSS (prompt 3)

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ label {
     font-weight: bold;
 }
 
+/* Updated rule to include number inputs alongside select dropdowns */
 select,
 input[type="number"] {
     width: 100%;
@@ -57,6 +58,13 @@ button {
 
 button:hover {
     background-color: #c0392b;
+}
+
+hr {
+    border: 0;
+    height: 1px;
+    background: #eee;
+    margin: 2rem 0;
 }
 
 .hidden {
